--- a/app/templates/freefood.html
+++ b/app/templates/freefood.html
@@ -20,7 +20,7 @@
   <nav class="navbar navbar-color-on-scroll fixed-top navbar-expand-lg" color-on-scroll="100" id="sectionsNav">
     <div class="container">
                 <div class="navbar-translate">
-                  <a class="navbar-brand" href="javascript:;">Home</a>
+                  <a class="navbar-brand" href="/home">Home</a>
                   <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="navbar-toggler-icon"></span>
@@ -30,10 +30,10 @@
                 </div>
                 <div class="collapse navbar-collapse">
                   <ul class="navbar-nav">
-                    <li class="nav-item"><a href="javascript:;" class="nav-link">On Campus Jobs</a></li>
-                    <li class="nav-item"><a href="javascript:;" class="nav-link">Book Resources</a></li>
-                    <li class="nav-item"><a href="javascript:;" class="nav-link">Free Food Event</a></li>
-                    <li class="nav-item"><a href="javascript:;" class="nav-link">Food Receipts</a></li>
+                    <li class="nav-item"><a href="/jobpage" class="nav-link">On Campus Jobs</a></li>
+                    <li class="nav-item"><a href="/books" class="nav-link">Book Resources</a></li>
+                    <li class="nav-item active" ><a href="/freefood" class="nav-link">Free Food Event</a></li>
+                    <li class="nav-item"><a href="/reciepe" class="nav-link">Food Receipts</a></li>
                   </ul>
                 </div>
               </div>
