--- a/app/templates/jobpage.html
+++ b/app/templates/jobpage.html
@@ -31,9 +31,9 @@
                 <div class="collapse navbar-collapse">
                   <ul class="navbar-nav">
                     <li class="nav-item"><a href="/jobpage" class="nav-link">On Campus Jobs</a></li>
-                    <li class="nav-item"><a href="javascript:;" class="nav-link">Book Resources</a></li>
-                    <li class="nav-item"><a href="javascript:;" class="nav-link">Free Food Event</a></li>
-                    <li class="nav-item"><a href="javascript:;" class="nav-link">Food Receipts</a></li>
+                    <li class="nav-item"><a href="/books" class="nav-link">Book Resources</a></li>
+                    <li class="nav-item"><a href="/freefood" class="nav-link">Free Food Event</a></li>
+                    <li class="nav-item"><a href="/reciepe" class="nav-link">Food Receipts</a></li>
                   </ul>
                 </div>
               </div>
