Deleted dashboard page and added those functionalites to bottom of home page

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -95,6 +95,14 @@
                   </div>
                 </div>
       </div>
+         <div class="container">
+              <div class = "section text-center">
+                "Ways to Save for College!"
+              </div>
+              <div class="text-center">
+                <button class = "btn btn-primary btn-round">Books</button>
+              </div>
+            </div>
     </div>
   </div>
 
