added image to reciepe page

--- a/app/templates/reciepe.html
+++ b/app/templates/reciepe.html
@@ -44,6 +44,7 @@
         <div class="col-md-8 ml-auto mr-auto">
           <div class="brand text-center">
             <h1>Food Recipes</h1>
+            <p4>10 Easy Recipes For College Students</p4>
           </div>
         </div>
       </div>
@@ -62,6 +63,7 @@
               <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
                   <div class="col-md-6">
                       <div class="card">
+                        <img class="card-img-top" src="https://www.budgetbytes.com/wp-content/uploads/2015/09/Poor-Mans-Burrito-Bowls-close-380x260.jpg" rel="nofollow" alt="Card image cap">
                           <div class="card-header card-header-danger">
                             <div class="card-text">
                               <h4 class="card-title">Poor Man Burrito</h4>
@@ -70,6 +72,7 @@
                           <div class="card-body">These easy no-frills burrito bowls are super fast and affordable. They're the perfect satisfying weeknight meal for times when money is tight! </div>
                     </div>
                     <div class="card">
+                        <img class="card-img-top" src="https://www.budgetbytes.com/wp-content/uploads/2017/12/Pizza-Roll-Ups-above-1-380x260.jpg" rel="nofollow" alt="Card image cap">
                         <div class="card-header card-header-danger">
                           <div class="card-text">
                             <h4 class="card-title">Pizza Roll Ups</h4>
@@ -78,7 +81,9 @@
                         <div class="card-body">Forget frozen pizza rolls! These Pizza Roll Ups are the perfect last minute appetizer or indulgent snack on busy days!</div>
                   </div>
                   <div class="card">
+                    <img class="card-img-top" src="https://www.budgetbytes.com/wp-content/uploads/2011/08/Pizzadillas252520close-380x260.jpg" rel="nofollow" alt="Card image cap">
                     <div class="card-header card-header-danger">
+                        
                       <div class="card-text">
                         <h4 class="card-title">Pizzadillas</h4>
                       </div>
