Added clickable image to route to book page on the home page

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -99,9 +99,10 @@
               <div class = "section text-center">
                 "Ways to Save for College!"
               </div>
-              <div class="text-center">
-                <button class = "btn btn-primary btn-round">Books</button>
-              </div>
+              <a href = "/books">
+                <img alt = "Books" src="https://www.incimages.com/uploaded_files/image/1920x1080/getty_883231284_200013331818843182490_335833.jpg"
+                     width = 150" height = "150">
+              </a>
             </div>
     </div>
   </div>
