--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -13,11 +13,10 @@
   <!-- Material Kit CSS -->
   <link href="{{ url_for('static',filename='assets/css/material-kit.css') }}" rel="stylesheet" />
 
-
 </head>
 
-<body>
-  <nav class="navbar navbar-color-on-scroll fixed-top navbar-expand-lg" color-on-scroll="100" id="sectionsNav">
+<body class="index-page sidebar-collapse">
+  <nav class="navbar navbar-transparent navbar-color-on-scroll fixed-top navbar-expand-lg" color-on-scroll="100" id="sectionsNav">
     <div class="container">
                 <div class="navbar-translate">
                   <a class="navbar-brand" href="/home">Home</a>
@@ -31,9 +30,9 @@
                 <div class="collapse navbar-collapse">
                   <ul class="navbar-nav">
                     <li class="nav-item"><a href="/jobpage" class="nav-link">On Campus Jobs</a></li>
-                    <li class="nav-item"><a href="javascript:;" class="nav-link">Book Resources</a></li>
-                    <li class="nav-item"><a href="javascript:;" class="nav-link">Free Food Event</a></li>
-                    <li class="nav-item"><a href="javascript:;" class="nav-link">Food Receipts</a></li>
+                    <li class="nav-item"><a href="/books" class="nav-link">Book Resources</a></li>
+                    <li class="nav-item"><a href="/freefood" class="nav-link">Free Food Event</a></li>
+                    <li class="nav-item"><a href="/reciepe" class="nav-link">Food Receipts</a></li>
                   </ul>
                 </div>
               </div>
@@ -124,6 +123,7 @@
   <script src=" {{ url_for('static',filename='assets/js/plugins/nouislider.min.js')}}" type="text/javascript"></script>
   <!--  Google Maps Plugin    -->
   <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
+  <script src="{{ url_for('static',filename='assets/js/material-kit.js')}}?v=2.0.7" type="text/javascript"></script>
 
 
 
