--- a/app/templates/jobpage.html
+++ b/app/templates/jobpage.html
@@ -16,12 +16,12 @@
 
 </head>
 
-<body>
-  <nav class="navbar navbar-color-on-scroll fixed-top navbar-expand-lg" color-on-scroll="100" id="sectionsNav">
+<body class="index-page sidebar-collapse">
+  <nav class="navbar navbar-transparent navbar-color-on-scroll fixed-top navbar-expand-lg" color-on-scroll="100" id="sectionsNav">
     <div class="container">
                 <div class="navbar-translate">
                   <a class="navbar-brand" href="/home">Home</a>
-                  <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
+                  <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-controls="navbarNav" aria-label="Toggle navigation">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="navbar-toggler-icon"></span>
                     <span class="navbar-toggler-icon"></span>
@@ -30,7 +30,7 @@
                 </div>
                 <div class="collapse navbar-collapse">
                   <ul class="navbar-nav">
-                    <li class="nav-item"><a href="/jobpage" class="nav-link">On Campus Jobs</a></li>
+                    <li class="nav-item active"><a href="/jobpage" class="nav-link">On Campus Jobs</a></li>
                     <li class="nav-item"><a href="/books" class="nav-link">Book Resources</a></li>
                     <li class="nav-item"><a href="/freefood" class="nav-link">Free Food Event</a></li>
                     <li class="nav-item"><a href="/reciepe" class="nav-link">Food Receipts</a></li>
@@ -97,9 +97,89 @@
               </div>
 
 
-              <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">adsf</div>
-              <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">.123..</div>
-              <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">..123123.</div>
+              <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">
+                  <div class="row">
+                  <div class="col-md-6">
+                      <div class="card">
+                          <div class="card-header card-header-info">
+                            <div class="card-text">
+                              <h4 class="card-title"></h4>
+                            </div>
+                          </div>
+                          <div class="card-body">
+                The place is close to Barceloneta Beach and bus stop just 2 min by walk and near to "Naviglio" where you can enjoy the main night life in Barcelona...
+                              <br/>
+                              <button class="btn btn-info">Apply</button>
+                        </div>
+                    </div>
+                    </div>
+                      <div class="col-md-6">
+                      <div class="card">
+                          <div class="card-header card-header-info">
+                            <div class="card-text">
+                              <h4 class="card-title"></h4>
+                            </div>
+                          </div>
+                          <div class="card-body">
+                The place is close to Barceloneta Beach and bus stop just 2 min by walk and near to "Naviglio" where you can enjoy the main night life in Barcelona...
+                        <br/>
+                              <button class="btn btn-info">Apply</button>
+                          </div>
+                    </div>
+                    </div>
+                  </div>
+              </div>
+                <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">
+                    <div class="row">
+
+                      <div class="col-md-6">
+                      <div class="card">
+                          <div class="card-header card-header-info">
+                            <div class="card-text">
+                              <h4 class="card-title"></h4>
+                            </div>
+                          </div>
+                          <div class="card-body">
+                The place is close to Barceloneta Beach and bus stop just 2 min by walk and near to "Naviglio" where you can enjoy the main night life in Barcelona...
+                        <br/>
+                              <button class="btn btn-info">Apply</button>
+                          </div>
+                    </div>
+                    </div>
+                  </div>
+                </div>
+              <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">
+                  <div class="row">
+                  <div class="col-md-6">
+                      <div class="card">
+                          <div class="card-header card-header-info">
+                            <div class="card-text">
+                              <h4 class="card-title"></h4>
+                            </div>
+                          </div>
+                          <div class="card-body">
+                The place is close to Barceloneta Beach and bus stop just 2 min by walk and near to "Naviglio" where you can enjoy the main night life in Barcelona...
+                              <br/>
+                              <button class="btn btn-info">Apply</button>
+                        </div>
+                    </div>
+                    </div>
+                      <div class="col-md-6">
+                      <div class="card">
+                          <div class="card-header card-header-info">
+                            <div class="card-text">
+                              <h4 class="card-title"></h4>
+                            </div>
+                          </div>
+                          <div class="card-body">
+                The place is close to Barceloneta Beach and bus stop just 2 min by walk and near to "Naviglio" where you can enjoy the main night life in Barcelona...
+                        <br/>
+                              <button class="btn btn-info">Apply</button>
+                          </div>
+                    </div>
+                    </div>
+                  </div>
+              </div>
             </div>
           </div>
 </div>
@@ -124,6 +204,7 @@
   <script src=" {{ url_for('static',filename='assets/js/plugins/nouislider.min.js')}}" type="text/javascript"></script>
   <!--  Google Maps Plugin    -->
   <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
+  <script src="{{ url_for('static',filename='assets/js/material-kit.js')}}?v=2.0.7" type="text/javascript"></script>
 
 
 
