--- a/app/templates/books.html
+++ b/app/templates/books.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-color-on-scroll fixed-top navbar-expand-lg" color-on-scroll="100" id="sectionsNav">
+  <nav class="navbar navbar-transparent navbar-color-on-scroll fixed-top navbar-expand-lg" color-on-scroll="100" id="sectionsNav">
     <div class="container">
                 <div class="navbar-translate">
                   <a class="navbar-brand" href="javascript:;">Home</a>
@@ -31,7 +31,7 @@
                 <div class="collapse navbar-collapse">
                   <ul class="navbar-nav">
                     <li class="nav-item"><a href="/jobpage" class="nav-link">On Campus Jobs</a></li>
-                    <li class="nav-item"><a href="/books" class="nav-link">Book Resources</a></li>
+                    <li class="nav-item active"><a href="/books" class="nav-link">Book Resources</a></li>
                     <li class="nav-item"><a href="/freefood" class="nav-link">Free Food Event</a></li>
                     <li class="nav-item"><a href="/reciepe" class="nav-link">Food Receipts</a></li>
                   </ul>
@@ -132,6 +132,7 @@
   <!--  Google Maps Plugin    -->
   <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
 
+  <script src="{{ url_for('static',filename='assets/js/material-kit.js')}}?v=2.0.7" type="text/javascript"></script>
 
 
 </html>
