--- a/app/templates/reciepe.html
+++ b/app/templates/reciepe.html
@@ -44,7 +44,7 @@
         <div class="col-md-8 ml-auto mr-auto">
           <div class="brand text-center">
             <h1>Food Recipes</h1>
-            <p4>10 Easy Recipes For College Students</p4>
+            <p1>10 Easy Recipes For College Students</p1>
           </div>
         </div>
       </div>
@@ -55,10 +55,18 @@
       <div class="section text-center">
         <div class="row">
           <div class="col-4">
-            <div class="list-group" id="list-tab" role="tablist">
+      </div>
+          <div class="col-8">
+              <div class="list-group" id="list-tab" role="tablist">
+                <div class="card" style="width: 10rem;">
+                    <img class="card-img-top" src="https://prodimage.images-bn.com/pimages/9780470111352_p0_v3_s550x406.jpg">
+                    <div class="card-body">
+                      <p class="card-text">Free Cooking Book</p>
+                    </div>
+                  </div>
+                
             </div>
           </div>
-          <div class="col-8">
             <div class="tab-content" id="nav-tabContent">
               <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
                   <div class="col-md-6">
