Added clickable images for all subpages

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -50,51 +50,50 @@
   </div>
   <div class="main main-raised">
     <div class="container">
-      <div class="section text-left">
 
-          <div class="card card-nav-tabs">
-                <div class="card-header card-header-primary">
-                  <!-- colors: "header-primary", "header-info", "header-success", "header-warning", "header-danger" -->
-                  <div class="nav-tabs-navigation">
-                    <div class="nav-tabs-wrapper">
-                      <ul class="nav nav-tabs" data-tabs="tabs">
-                        <li class="nav-item">
-                          <a class="nav-link active" href="#profile" data-toggle="tab">
-                            <i class="material-icons">face</i>
-                            Estimated Cost
-                          </a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="#messages" data-toggle="tab">
-                            <i class="material-icons">chat</i>
-                            Tuition without FAFSA
-                          </a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="#settings" data-toggle="tab">
-                            <i class="material-icons">build</i>
-                            Other fees
-                          </a>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-                <div class="card-body ">
-                  <div class="tab-content text-center">
-                    <div class="tab-pane active" id="profile">
-                      <p> I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that&#x2019;s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at. I think that&#x2019;s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at. </p>
-                    </div>
-                    <div class="tab-pane" id="messages">
-                      <p> I think that&#x2019;s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at. I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that&#x2019;s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at.</p>
-                    </div>
-                    <div class="tab-pane" id="settings">
-                      <p>I think that&#x2019;s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at. So when you get something that has the name Kanye West on it, it&#x2019;s supposed to be pushing the furthest possibilities. I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus.</p>
-                    </div>
-                  </div>
-                </div>
+      <div class="card card-nav-tabs">
+        <div class="card-header card-header-primary">
+          <!-- colors: "header-primary", "header-info", "header-success", "header-warning", "header-danger" -->
+          <div class="nav-tabs-navigation">
+            <div class="nav-tabs-wrapper">
+              <ul class="nav nav-tabs" data-tabs="tabs">
+                <li class="nav-item">
+                  <a class="nav-link active" href="#profile" data-toggle="tab">
+                    <i class="material-icons">face</i>
+                    Estimated Cost
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#messages" data-toggle="tab">
+                    <i class="material-icons">chat</i>
+                    Tuition without FAFSA
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#settings" data-toggle="tab">
+                    <i class="material-icons">build</i>
+                    Other fees
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="card-body ">
+          <div class="tab-content text-center">
+            <div class="tab-pane active" id="profile">
+              <p> I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that&#x2019;s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at. I think that&#x2019;s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at. </p>
+            </div>
+            <div class="tab-pane" id="messages">
+              <p> I think that&#x2019;s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at. I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that&#x2019;s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at.</p>
+            </div>
+            <div class="tab-pane" id="settings">
+              <p>I think that&#x2019;s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at. So when you get something that has the name Kanye West on it, it&#x2019;s supposed to be pushing the furthest possibilities. I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus.</p>
+            </div>
+          </div>
+        </div>
       </div>
-         <div class="container">
+      <div class="container">
               <div class = "section text-center">
                 "Ways to Save for College!"
               </div>
@@ -102,7 +101,22 @@
                 <img alt = "Books" src="https://www.incimages.com/uploaded_files/image/1920x1080/getty_883231284_200013331818843182490_335833.jpg"
                      width = 150" height = "150">
               </a>
-            </div>
+           <span style = "padding-right: 150px" ></span>
+              <a href = "/jobpage">
+                <img alt = "Jobs" src="https://cdn.uconnectlabs.com/wp-content/uploads/sites/21/2016/11/Handshake-Job-Search-480x270.png?v=6778"
+                     width = 150" height = "150">
+              </a>
+          <span style = "padding-right: 150px" ></span>
+              <a href = "/freefood">
+                <img alt = "Free Food" src="https://sd.keepcalms.com/i/keep-calm-and-eat-free-food.png"
+                     width = 150" height = "150">
+              </a>
+         <span style = "padding-right: 150px" ></span>
+              <a href = "/reciepe">
+                <img alt = "Recipes" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTkrCNamJmYdGUikvAFOs0avwWsrsM2H3t8ZA&usqp=CAU"
+                     width = 150" height = "150">
+              </a>
+      </div>
     </div>
   </div>
 
