--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -31,7 +31,8 @@
 	
 	<div class="container-login100" style="background-image: url('{{ url_for('static',filename='StarterPage/images/bg-01.jpg') }}');">
 		<div class="wrap-login100 p-l-55 p-r-55 p-t-80 p-b-30">
-			<form action="/home" method="POST" class="login100-form validate-form">
+
+			<form  method="POST" class="login100-form validate-form">
 				<span class="login100-form-title p-b-37">
 					Welcome
 				</span>
@@ -42,14 +43,13 @@
 				</div>
 
 				<div class="wrap-input100 validate-input m-b-25" data-validate = "Enter annual income">
-					<input class="input100" type="password" name="income" placeholder="Annual income">
+					<input class="input100" type="text" name="income" placeholder="Annual income">
 					<span class="focus-input100"></span>
 				</div>
 
 				<div class="container-login100-form-btn">
-					<button class="login100-form-btn">
-						Continue
-					</button>
+					<input class="login100-form-btn" type="submit" value="Continue"/>
+
 				</div>
 
 
