Added when, where, and why to get free food on the freefood page. Also changed the background

--- a/app/templates/freefood.html
+++ b/app/templates/freefood.html
@@ -38,7 +38,7 @@
                 </div>
               </div>
   </nav>
-  <div class="page-header header-filter" data-parallax="true" style="background-image: url('{{ url_for('static',filename='assets/img/bg3.jpg') }}')">
+  <div class="page-header header-filter" data-parallax="true" style="background-image: url('https://www.poncacitynews.com/sites/poncacitynews.etypegoogle7.com/files/47c92af459_Ar00103003.jpg')">
     <div class="container">
       <div class="row">
         <div class="col-md-8 ml-auto mr-auto">
@@ -73,13 +73,14 @@
                           </div>
                           <div class="card-body">
                 <!--The place is close to Barceloneta Beach and bus stop just 2 min by walk and near to "Naviglio" where you can enjoy the main night life in Barcelona...-->
-                          Gaining access to free food on the weekends help lower your amount of spending on food. On average, students spend over 30 dollars on weekends to eat out.
+                          Gaining access to free food on the weekends help lower your amount of spending on food. On average, students spend over 30 dollars on weekends to eat out. <img src = 'https://media2.giphy.com/media/5kF1T9bhdOC5rmnwUX/source.gif' width = "500" height = "400">
                         </div>
                     </div>
                 </div>
               </div>
-              <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">Extraccuriculars, clubs, parties</div>
-              <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list"><img src = "p"</div>
+              <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">Extraccuriculars, clubs, parties <img src = 'https://blog.empowerly.com/hs-fs/hubfs/excur1-1.png?width=399&name=excur1-1.png'> </div>
+              <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list"><img src = "https://www.tasteofhome.com/wp-content/uploads/2018/01/Hot-Wings_EXPS_FT19_5186_F_0813_1-1-696x696.jpg" width="400" height="400"> This Saturday, September 11, Code
+               for good is offering free wings to its members. Come get them while they are hot!</div>
              <!-- <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">..123123.</div>-->
             </div>
           </div>
