--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -62,7 +62,7 @@
                         <li class="nav-item">
                           <a class="nav-link active" href="#profile" data-toggle="tab">
                             <i class="material-icons">face</i>
-                            Estimated Cost
+                            Advertised Cost
                           </a>
                         </li>
                         <li class="nav-item">
