Updated csv files

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -85,11 +85,11 @@
                   <div class="tab-content text-center">
                     <div class="tab-pane active" id="profile">
                       <h3>{{college}}</h3>
-                      <ul>
+
                       {% for row in AdCost %}
                       <li>{{ row[0]|e }} : {{ row[1]|e }} </li>
                     {% endfor %}
-                      </ul>
+
                     </div>
                     <div class="tab-pane" id="messages">
                         <h3>{{college}}</h3>
@@ -100,7 +100,10 @@
 
                     </div>
                     <div class="tab-pane" id="settings">
-                      <p>I think that&#x2019;s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at. So when you get something that has the name Kanye West on it, it&#x2019;s supposed to be pushing the furthest possibilities. I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus.</p>
+                        <h3>Annual Income: {{income}}</h3>
+                        {% for row in FA %}
+                      <li>{{ row[0]|e }} : {{ row[1]|e }} </li>
+                    {% endfor %}
                     </div>
                   </div>
                 </div>
