--- a/app/templates/books.html
+++ b/app/templates/books.html
@@ -108,7 +108,8 @@
                 </div>
               </div>
               <div class="animated fadeInUp tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">
-              <iframe name="bookFrame" src="https://isbn.nu/cgi-bin/design-books" width="400" height="450"></iframe>
+              <div class="embed-responsive embed-responsive-4by3">
+                  <iframe class="embed-responsive-item" name="bookFrame" src="https://isbn.nu/cgi-bin/design-books"></iframe></div>
             </div>
           </div>
         </div>
