--- a/app/templates/housing.html
+++ b/app/templates/housing.html
@@ -53,7 +53,7 @@
   </div>
   <div class="main main-raised">
     <div class="container">
-      <div class="section text-center">
+      <div class="section text-left">
         <div class="row">
           <div class="col-4">
             <div class="animated fadeInUp list-group" id="list-tab" role="tablist">
@@ -67,34 +67,28 @@
             <div class="tab-content" id="nav-tabContent">
               <div class="animated fadeInUp tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
                   <div class="row">
-                  <div class="col-md-6">
+                  <div class="col-lg">
                       <div class="card">
-                          <div class="card-header card-header-danger">
-                            <div class="card-text">
-                              <h4 class="card-title"></h4>
+                          <div class="card-header card-header-icon card-header-rose">
+                              <div class="card-icon">
+                        <i class="material-icons">language</i>
                             </div>
+
                           </div>
                           <div class="card-body">
-                The place is close to Barceloneta Beach and bus stop just 2 min by walk and near to "Naviglio" where you can enjoy the main night life in Barcelona...
-                              <br/>
-                              <button class="btn btn-info">Apply</button>
+                              <div class="embed-responsive embed-responsive-4by3">
+                                <iframe
+                                        class="embed-responsive-item"
+                                width="530"
+                                height="450"
+                                frameborder="0" style="border:0"
+                                src="https://maps.google.com/maps?q=manhatan&t=&z=13&ie=UTF8&iwloc=&output=embed" allowfullscreen>
+                                </iframe>
+                              </div>
                         </div>
                     </div>
                     </div>
-                      <div class="col-md-6">
-                      <div class="card">
-                          <div class="card-header card-header-danger">
-                            <div class="card-text">
-                              <h4 class="card-title"></h4>
-                            </div>
-                          </div>
-                          <div class="card-body">
-                The place is close to Barceloneta Beach and bus stop just 2 min by walk and near to "Naviglio" where you can enjoy the main night life in Barcelona...
-                        <br/>
-                              <button class="btn btn-info">Apply</button>
-                          </div>
-                    </div>
-                    </div>
+
                   </div>
               </div>
 
