--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -36,6 +36,7 @@
                     <li class="nav-item"><a href="/books" class="nav-link">Book Resources</a></li>
                     <li class="nav-item"><a href="/freefood" class="nav-link">Free Food Event</a></li>
                     <li class="nav-item"><a href="/reciepe" class="nav-link">Food Receipts</a></li>
+                      <li class="nav-item"><a href="/pricefinder" class="nav-link">Price Finder</a></li>
                   </ul>
                 </div>
               </div>
