--- a/app/templates/pricefinder.html
+++ b/app/templates/pricefinder.html
@@ -32,21 +32,22 @@
                 <div class="collapse navbar-collapse">
                   <ul class="navbar-nav">
                     <li class="nav-item"><a href="/jobpage" class="nav-link">On Campus Jobs</a></li>
-                      <li class="nav-item active"><a href="/housing" class="nav-link">Housing</a></li>
+                      <li class="nav-item "><a href="/housing" class="nav-link">Housing</a></li>
                     <li class="nav-item"><a href="/books" class="nav-link">Book Resources</a></li>
                     <li class="nav-item"><a href="/freefood" class="nav-link">Free Food Event</a></li>
                     <li class="nav-item"><a href="/reciepe" class="nav-link">Food Receipts</a></li>
-                      <li class="nav-item"><a href="/pricefinder" class="nav-link">Price Finder</a></li>
+                   <li class="nav-item active"><a href="/pricefinder" class="nav-link">Price Finder</a></li>
                   </ul>
                 </div>
               </div>
   </nav>
-  <div class="page-header header-filter" data-parallax="true" style="background-image: url('{{ url_for('static',filename='img/miniature-house-with-blur-background-subject-is-blurred_33811-287.jpg') }}')">
+  <div class="page-header header-filter" data-parallax="true" style="background-image: url('{{ url_for('static',filename='img/istockphoto-1151734344-170667a.jpg') }}')">
     <div class="container">
       <div class="row">
         <div class="col-md-8 ml-auto mr-auto">
           <div class="animated fadeInUp brand text-center">
-            <h1>Housing</h1>
+            <h1>Price Finder</h1>
+              <p>Help you find the lowest price across the internet</p>
           </div>
         </div>
       </div>
@@ -54,66 +55,15 @@
   </div>
   <div class="main main-raised">
     <div class="container">
-      <div class="section text-left">
-        <div class="row">
-          <div class="col-4">
-            <div class="animated fadeInUp list-group" id="list-tab" role="tablist">
-              <a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">Near By</a>
-              <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Search</a>
-            </div>
-          </div>
-          <div class="col-8">
-            <div class="tab-content" id="nav-tabContent">
-              <div class="animated fadeInUp tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
-                  <div class="row">
-                  <div class="col-lg">
-                      <div class="card">
-                          <div class="card-header card-header-icon card-header-rose">
-                              <div class="card-icon">
-                        <i class="material-icons">language</i>
-                            </div>
+      <div class="section text-center">
 
-                          </div>
-                          <div class="card-body">
-                              <div class="embed-responsive embed-responsive-4by3">
-                                <iframe
-                                        class="embed-responsive-item"
-                                width="530"
-                                height="450"
-                                frameborder="0" style="border:0"
-                                src="https://maps.google.com/maps?q=manhatan&t=&z=13&ie=UTF8&iwloc=&output=embed" allowfullscreen>
-                                </iframe>
-                              </div>
-                        </div>
-                    </div>
-                    </div>
+          <form action="/action_page.php">
+  <input type="file" id="myFile" name="filename">
+</form>
+            <a href="https://www.google.com/shopping/product/16684989827641767928/online?hl=en-US&prmd=sniv&sxsrf=ALeKk03fMd8RpZZRCoPv2LNRGUe5khiSjw:1599911586876&q=AirPods+Pro&biw=414&bih=719&prds=cid:16684989827641767928,num:10,prmr:1,sgro:oo">
+          <button type="button" class="btn btn-info">Check Price!</button>
+            </a>
 
-                  </div>
-              </div>
-
-
-                <div class="animated fadeInUp tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">
-                    <div class="row">
-
-                      <div class="col-md-6">
-                      <div class="card">
-                          <div class="card-header card-header-info">
-                            <div class="card-text">
-                              <h4 class="card-title"></h4>
-                            </div>
-                          </div>
-                          <div class="card-body">
-                The place is close to Barceloneta Beach and bus stop just 2 min by walk and near to "Naviglio" where you can enjoy the main night life in Barcelona...
-                        <br/>
-                              <button class="btn btn-info">Apply</button>
-                          </div>
-                    </div>
-                    </div>
-                  </div>
-                </div>
-            </div>
-          </div>
-</div>
       </div>
     </div>
   </div>
