--- a/app/templates/books.html
+++ b/app/templates/books.html
@@ -75,7 +75,9 @@
                             </div>
                           </div>
                           <div class="card-body">
-                          Gaining access to free food on the weekends help lower your amount of spending on food. On average, students spend over 30 dollars on weekends to eat out.
+                          <p>You shouldn't always buy new books as used books can be a great alternative. <br>
+                          Buying used books can help save money. A common place to buy used books is <a href="ebay.com">ebay</a></p>. <br>
+                          You can either use the buy it now feature or bid on it. Give it a go.
                         </div>
                     </div>
                 </div>
@@ -89,7 +91,8 @@
                             </div>
                           </div>
                           <div class="card-body">
-                         over 30 dollars on weekends to eat out.
+                         <p>Renting books is another good way to dave money. You're only going to need the book for one class so why not just rent it? <br>
+                         You save money and it saves you the hassle of finding a way to get rid of it once you don't need it anymore. <a href="amazon.com">Go and check out amazon for renting books</a></p>. <br></p>
                         </div>
                     </div>
                 </div>
@@ -103,7 +106,9 @@
                             </div>
                           </div>
                           <div class="card-body">
-                          Gainids help lower your amount of spending on food. On average, students spend over 30 dollars on weekends to eat out.
+                          <p>A lot of universities have marketplaces which are usually big Facebook groups where they list things they don't need. <b>
+                          A person that already took the class you're trying to take might list the book you need for a cheap price. Try to snag the book you need, <br>
+                        Some people may not know about the existance of such places, but know you know. Go and try to find your universities marketplace group and save some money. <a href="facebook.com">Check it out</a></p>. <br></p></p>
                         </div>
                     </div>
                 </div>
